ocfl-java-itest/src/test/resources/invalid-repos/bad-logical-paths/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/v7/inventory.json.sha512
ca4a9952840bb8003e0c05bf418854a88ad4f5482431887df60054013af764017daabf6190f42990fcf81f9c3598a37ea512a6004f82caaf5f6827de88fdb87b	inventory.json